tests/snapshots/test_derive_input__ambiguous_crate.snap
---
created: "2019-04-06T05:46:03.331610977Z"
creator: insta@0.7.4
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [],
    vis: Inherited,
    ident: Ident(
        S,
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None,
    },
    data: Struct(
        DataStruct {
            struct_token: Struct,
            fields: Unnamed(
                FieldsUnnamed {
                    paren_token: Paren,
                    unnamed: [
                        Field {
                            attrs: [],
                            vis: Inherited,
                            ident: None,
                            colon_token: None,
                            ty: Path(
                                TypePath {
                                    qself: None,
                                    path: Path {
                                        leading_colon: None,
                                        segments: [
                                            PathSegment {
                                                ident: Ident(
                                                    crate,
                                                ),
                                                arguments: None,
                                            },
                                            Colon2,
                                            PathSegment {
                                                ident: Ident(
                                                    X,
                                                ),
                                                arguments: None,
                                            },
                                        ],
                                    },
                                },
                            ),
                        },
                    ],
                },
            ),
            semi_token: Some(
                Semi,
            ),
        },
    ),
}
