tests/snapshots/test_derive_input__attr_with_mod_style_path_with_self.snap
---
created: "2019-04-06T05:46:03.331559308Z"
creator: insta@0.7.4
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [
        Attribute {
            pound_token: Pound,
            style: Outer,
            bracket_token: Bracket,
            path: Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident(
                            foo,
                        ),
                        arguments: None,
                    },
                    Colon2,
                    PathSegment {
                        ident: Ident(
                            self,
                        ),
                        arguments: None,
                    },
                ],
            },
            tts: TokenStream [],
        },
    ],
    vis: Inherited,
    ident: Ident(
        S,
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None,
    },
    data: Struct(
        DataStruct {
            struct_token: Struct,
            fields: Unit,
            semi_token: Some(
                Semi,
            ),
        },
    ),
}
