tests/snapshots/test_derive_input__attr_with_non_mod_style_path.snap
---
created: "2019-03-11T05:40:04.790698962Z"
creator: insta@0.7.1
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [
        Attribute {
            pound_token: Pound,
            style: Outer,
            bracket_token: Bracket,
            path: Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident(
                            inert
                        ),
                        arguments: None
                    }
                ]
            },
            tts: TokenStream [
                Punct {
                    op: '<',
                    spacing: Alone
                },
                Ident {
                    sym: T
                },
                Punct {
                    op: '>',
                    spacing: Alone
                }
            ]
        }
    ],
    vis: Inherited,
    ident: Ident(
        S
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None
    },
    data: Struct(
        DataStruct {
            struct_token: Struct,
            fields: Unit,
            semi_token: Some(
                Semi
            )
        }
    )
}
