tests/snapshots/test_derive_input__enum-2.snap
---
created: "2019-04-06T05:46:03.356798327Z"
creator: insta@0.7.4
source: tests/test_derive_input.rs
expression: syntax_tree
---
[
    NameValue(
        MetaNameValue {
            ident: Ident(
                doc,
            ),
            eq_token: Eq,
            lit: Str(
                LitStr {
                    token: Literal {
                        lit: r" See the std::result module documentation for details.",
                    },
                },
            ),
        },
    ),
    Word(
        Ident(
            must_use,
        ),
    ),
]
