tests/snapshots/test_derive_input__fields_on_named_struct-2.snap
---
created: "2019-03-11T05:40:06.909636070Z"
creator: insta@0.7.1
source: tests/test_derive_input.rs
expression: syntax_tree
---
[
    Field {
        attrs: [],
        vis: Inherited,
        ident: Some(
            Ident(
                foo
            )
        ),
        colon_token: Some(
            Colon
        ),
        ty: Path(
            TypePath {
                qself: None,
                path: Path {
                    leading_colon: None,
                    segments: [
                        PathSegment {
                            ident: Ident(
                                i32
                            ),
                            arguments: None
                        }
                    ]
                }
            }
        )
    },
    Field {
        attrs: [],
        vis: Public(
            VisPublic {
                pub_token: Pub
            }
        ),
        ident: Some(
            Ident(
                bar
            )
        ),
        colon_token: Some(
            Colon
        ),
        ty: Path(
            TypePath {
                qself: None,
                path: Path {
                    leading_colon: None,
                    segments: [
                        PathSegment {
                            ident: Ident(
                                String
                            ),
                            arguments: None
                        }
                    ]
                }
            }
        )
    }
]
