tests/snapshots/test_derive_input__fields_on_tuple_struct-2.snap
---
created: "2019-03-11T05:40:06.909622097Z"
creator: insta@0.7.1
source: tests/test_derive_input.rs
expression: syntax_tree
---
[
    Field {
        attrs: [],
        vis: Inherited,
        ident: None,
        colon_token: None,
        ty: Path(
            TypePath {
                qself: None,
                path: Path {
                    leading_colon: None,
                    segments: [
                        PathSegment {
                            ident: Ident(
                                i32
                            ),
                            arguments: None
                        }
                    ]
                }
            }
        )
    },
    Field {
        attrs: [],
        vis: Public(
            VisPublic {
                pub_token: Pub
            }
        ),
        ident: None,
        colon_token: None,
        ty: Path(
            TypePath {
                qself: None,
                path: Path {
                    leading_colon: None,
                    segments: [
                        PathSegment {
                            ident: Ident(
                                String
                            ),
                            arguments: None
                        }
                    ]
                }
            }
        )
    }
]
