tests/snapshots/test_derive_input__fields_on_tuple_struct.snap
---
created: "2019-03-11T05:40:04.805150017Z"
creator: insta@0.7.1
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [],
    vis: Inherited,
    ident: Ident(
        S
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None
    },
    data: Struct(
        DataStruct {
            struct_token: Struct,
            fields: Unnamed(
                FieldsUnnamed {
                    paren_token: Paren,
                    unnamed: [
                        Field {
                            attrs: [],
                            vis: Inherited,
                            ident: None,
                            colon_token: None,
                            ty: Path(
                                TypePath {
                                    qself: None,
                                    path: Path {
                                        leading_colon: None,
                                        segments: [
                                            PathSegment {
                                                ident: Ident(
                                                    i32
                                                ),
                                                arguments: None
                                            }
                                        ]
                                    }
                                }
                            )
                        },
                        Comma,
                        Field {
                            attrs: [],
                            vis: Public(
                                VisPublic {
                                    pub_token: Pub
                                }
                            ),
                            ident: None,
                            colon_token: None,
                            ty: Path(
                                TypePath {
                                    qself: None,
                                    path: Path {
                                        leading_colon: None,
                                        segments: [
                                            PathSegment {
                                                ident: Ident(
                                                    String
                                                ),
                                                arguments: None
                                            }
                                        ]
                                    }
                                }
                            )
                        }
                    ]
                }
            ),
            semi_token: Some(
                Semi
            )
        }
    )
}
