tests/snapshots/test_derive_input__pub_restricted.snap
---
created: "2019-03-11T05:40:04.817527335Z"
creator: insta@0.7.1
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [],
    vis: Restricted(
        VisRestricted {
            pub_token: Pub,
            paren_token: Paren,
            in_token: Some(
                In
            ),
            path: Path {
                leading_colon: None,
                segments: [
                    PathSegment {
                        ident: Ident(
                            m
                        ),
                        arguments: None
                    }
                ]
            }
        }
    ),
    ident: Ident(
        Z
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None
    },
    data: Struct(
        DataStruct {
            struct_token: Struct,
            fields: Unnamed(
                FieldsUnnamed {
                    paren_token: Paren,
                    unnamed: [
                        Field {
                            attrs: [],
                            vis: Restricted(
                                VisRestricted {
                                    pub_token: Pub,
                                    paren_token: Paren,
                                    in_token: Some(
                                        In
                                    ),
                                    path: Path {
                                        leading_colon: None,
                                        segments: [
                                            PathSegment {
                                                ident: Ident(
                                                    m
                                                ),
                                                arguments: None
                                            },
                                            Colon2,
                                            PathSegment {
                                                ident: Ident(
                                                    n
                                                ),
                                                arguments: None
                                            }
                                        ]
                                    }
                                }
                            ),
                            ident: None,
                            colon_token: None,
                            ty: Path(
                                TypePath {
                                    qself: None,
                                    path: Path {
                                        leading_colon: None,
                                        segments: [
                                            PathSegment {
                                                ident: Ident(
                                                    u8
                                                ),
                                                arguments: None
                                            }
                                        ]
                                    }
                                }
                            )
                        }
                    ]
                }
            ),
            semi_token: Some(
                Semi
            )
        }
    )
}
